# Thought

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE_CHECKLIST.md  docker-compose.yml  memory_service.py  pyproject.toml  thought_cli.py
.github/: release.yml  release_template.md
.github/workflows/: release.yml  validate.yml
java/: pom.xml
java/results/: benchmark_results.json  jmh_raw_results.json  lab_validation_report.md
results/: agent_loop_benchmark_results.json  benchmark_results.json  lab_validation_report.md  phase1_validation_snippets.md  phase2_validation_snippets.md  phase3_validation_snippets.md  phase4_validation_snippets.md  tms_benchmark_results.json  tms_graph_benchmark_results.json
scripts/: agent_loop_benchmark.py  benchmark.py  check_gates.py  lab_validate.py  lab_validate_all.py  tms_benchmark.py  tms_graph_benchmark.py
tests/: test_agent_loop.py  test_core.py  test_fuzz.py  test_phase4_fuzz.py  test_public_namespace.py  test_sdk_clients.py  test_sdk_thought_llm.py  test_spec_reproduction.py  test_thought_cli.py  test_tms_core.py  test_tms_fuzz.py  test_tms_graph.py  test_tms_graph_fuzz.py  test_tms_prompt_helpers.py  test_tms_reflection.py
thought_wrapper/: __init__.py  core.py  samples.py
thought_wrapper/agent/: __init__.py  loop.py
thought_wrapper/sdk/: __init__.py  clients.py  models.py  thought_llm.py
thought_wrapper/tms/: __init__.py  embeddings.py  graph.py  models.py  pipeline.py  prompt_helpers.py  reflection.py  store.py
thoughtwrapper/: __init__.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: core.ts  (+2 more)
(+23 files in other folders)
